fix bug #37386 (autocreating element doesn't assign value to first node) all single SimpleXMLElements are addressable using offset 0 use correct node for xpath context node add test

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_2@232677 c90b9560-bf6c-de11-be94-00142212c4b1